2011-01-17  Ivan Maidanski  <ivmai@mail.ru>

	* allchblk.c (GC_use_entire_heap): Change type to int (as declared
	in gc.h); set the default value depending on new GC_USE_ENTIRE_HEAP
	macro.
	* misc.c (GC_init): Test GC_USE_ENTIRE_HEAP environment variable to
	alter the default value of GC_use_entire_heap.
	* doc/README.environment (GC_USE_ENTIRE_HEAP): Document.
	* doc/README.macros (GC_USE_ENTIRE_HEAP): Ditto.

2011-01-12  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (PARALLEL_MARK): Do not make it cause
	MPROTECT_VDB undefining.

2011-01-07  Ivan Maidanski  <ivmai@mail.ru>

	* gc_dlopen.c: Reformat the comments and adjust code indentation.
	* include/private/gcconfig.h (DYNAMIC_LOADING): Fix filename in
	the comment.

2011-01-07  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gc_priv.h (THREAD_FLD, MAX_HEAP_SECTS,
	_GC_arrays, GC_push_all_stack_sections, PRINT_BLACK_LIST,
	GC_add_to_black_list_stack, GC_ASSERT, SIG_SUSPEND,
	NEED_FIND_LIMIT): Reformat the code and comments for.
	* include/private/gc_priv.h (_GC_arrays): Move the conditional
	macro definitions (shortcuts for GC_arrays members) into the
	structure body.

2011-01-07  Ivan Maidanski  <ivmai@mail.ru>

	* .cvsignore: Add more auto-generated files.
	* include/private/.cvsignore: Ditto.
	* darwin_stop_world.c (GC_mach_handler_thread,
	GC_use_mach_handler_thread,
	GC_darwin_register_mach_handler_thread): Define only if
	MPROTECT_VDB.
	* darwin_stop_world.c (GC_suspend_thread_list): Use
	GC_mach_handler_thread and GC_use_mach_handler_thread only if
	MPROTECT_VDB.
	* darwin_stop_world.c (GC_stop_world): Reset GC_mach_threads_count
	only if defined (i.e. unless GC_NO_THREADS_DISCOVERY).
	* misc.c (GC_init): Fix comment for GWW_VDB.
	* os_dep.c (GC_mprotect_state_t): Reformat the code.
	* os_dep.c (DARWIN_EXC_STATE, DARWIN_EXC_STATE_COUNT,
	DARWIN_EXC_STATE_T, DARWIN_EXC_STATE_DAR): New macros.
	* os_dep.c (catch_exception_raise): Use DARWIN_EXC_STATE,