@@ -1,3 +1,14 @@
+2011-01-22  Ivan Maidanski  <ivmai@mail.ru> (mostly Jean-Claude Beaudoin)
+
+	* darwin_stop_world.c (GC_FindTopOfStack): Prefix and suffix
+	"volatile" keyword with double underscore.
+	* mach_dep.c (GETCONTEXT_FPU_EXCMASK_BUG): Recognize new macro and
+	include fenv.h if defined (unless NO_GETCONTEXT or HAVE_PUSH_REGS).
+	* mach_dep.c (GC_with_callee_saves_pushed): Restore FPU exception
+	mask corrupted by getcontext if GETCONTEXT_FPU_EXCMASK_BUG.
+	* include/private/gcconfig.h (GETCONTEXT_FPU_EXCMASK_BUG): Define
+	for Linux/amd64 (since its GLibc getcontext currently has the bug).
+
 2011-01-17  Ivan Maidanski  <ivmai@mail.ru>
 
 	* allchblk.c (GC_use_entire_heap): Change type to int (as declared
